[package]
publish = false
name = "rust-avr-usb"
version = "0.1.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avr-device = { version = "0.3.3", features = ["rt"] }
usb-device = "0.2"
usbd-hid = "0.6"

[dependencies.atmega-hal]
git = "https://github.com/agausmann/avr-hal.git"
branch = "patch/kbforge"
features = ["atmega32u4"]

[profile.dev]
opt-level = "s"
lto = true

[profile.release]
opt-level = "s"
lto = true