[package]
publish = false
name = "rust-avr-usb"
version = "0.1.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atmega-usbd = { path = "../atmega-usbd" }
usb-device = "0.2"
usbd-hid = "0.6"

[dependencies.atmega-hal]
git = "https://github.com/rahix/avr-hal.git"
features = ["atmega32u4"]

[profile.dev]
opt-level = "s"
lto = true

[profile.release]
opt-level = "s"
lto = true