[package]
publish = false
name = "rust-avr-usb"
version = "0.1.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usb-device = "0.2"
usbd-hid = "0.6"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal.git"
features = ["arduino-leonardo"]

[dependencies.atmega-usbd]
# git = "https://github.com/agausmann/atmega-usbd.git"
path = "../atmega-usbd"

[profile.dev]
opt-level = "s"
lto = true

[profile.release]
opt-level = "s"
lto = true